force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <description>This Object will store all the information related to Salary of the employees .</description>
    <label>Salary</label>
    <nameField>
        <displayFormat>SID-{0000}</displayFormat>
        <label>Salary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>