force-app/main/default/objects/Salary__c/fields/Arrear__c.field-meta.xml
<CustomField>
    <fullName>Arrear__c</fullName>
    <description>This field will store the Arrear value of the Employee.</description>
    <label>Arrear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>