force-app/main/default/objects/Salary__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <description>This is used to store the basic salary amount of the employee .</description>
    <label>Basic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>