force-app/main/default/objects/Salary__c/fields/Dearness_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Dearness_Allowance__c</fullName>
    <description>This field will store the Dearness Allowance of an Employee .</description>
    <label>Dearness Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>