force-app/main/default/objects/Salary__c/fields/Gross_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Gross_Deduction__c</fullName>
    <description>This field will stpre the Gross Deduction in the salary of an Employee .</description>
    <label>Gross Deduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>