force-app/main/default/objects/Salary__c/fields/Gross_Pay__c.field-meta.xml
<CustomField>
    <fullName>Gross_Pay__c</fullName>
    <description>This will store the Gross pay value of an employee .</description>
    <label>Gross Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>