force-app/main/default/objects/Salary__c/fields/Leave_Without_Pay__c.field-meta.xml
<CustomField>
    <fullName>Leave_Without_Pay__c</fullName>
    <label>Leave Without Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>