force-app/main/default/objects/Salary__c/fields/Mediclaim__c.field-meta.xml
<CustomField>
    <fullName>Mediclaim__c</fullName>
    <description>This field will store the amount of a mediclaim assigned to Employee by the Organization.</description>
    <label>Mediclaim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>