force-app/main/default/objects/Salary__c/fields/Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>Net_Salary__c</fullName>
    <label>Net Salary</label>
    <length>90</length>
    <type>Text</type>
</CustomField>