force-app/main/default/objects/Salary__c/fields/Provident_Fund__c.field-meta.xml
<CustomField>
    <fullName>Provident_Fund__c</fullName>
    <description>This will store the value of provident fund of an Employee .</description>
    <label>Provident Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>