force-app/main/default/objects/Salary__c/fields/Tax_Deducted_at_Source__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deducted_at_Source__c</fullName>
    <label>Tax Deducted at Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>